git link updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             </a>
                         </div>
                         <div>
-                            <a href="https://www.linkedin.com/in/sahil-balhra-834b2b1a5/">
+                            <a href="https://github.com/Sahilbalhra?tab=repositories">
                                 <img src="Git.png" alt="git logo">
                             </a>
                         </div>
@@ -445,7 +445,7 @@
                                 </a>
                             </div>
                             <div>
-                                <a href="https://www.linkedin.com/in/sahil-balhra-834b2b1a5/">
+                                <a href="https://github.com/Sahilbalhra?tab=repositories">
                                     <img src="Git.png" alt="git logo">
                                 </a>
                             </div>
